登录注册界面，图标

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ui.my.MyRegisterActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.my.MyLoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.my.MyFeedbackActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.petlist.PetAddActivity"
             android:exported="true" />
 
