--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ui.main.TestMainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.my.MyPasswordActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.my.MyInfoActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.my.MyRegisterActivity"
             android:exported="true" />
         <activity
